# kws_testset

./: .gitignore  README.md  pyproject.toml
configs/: app.yaml
docs/superpowers/plans/: 2026-06-17-kws-testset-mvp-implementation.md  2026-06-18-kws-testset-platform-ui-implementation.md  2026-06-20-kws-testset-generation-enhancement-c-implementation.md  2026-06-20-kws-testset-reference-audio-enhancements-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
kws_testset/: __main__.py  app.py  cli.py  config.py  db.py  taxonomy.py
kws_testset/api/: assets.py  datasets.py  imports.py  taxonomy.py  transforms.py
kws_testset/models/: __init__.py  audio.py  dataset.py  import_batch.py  transform_job.py
kws_testset/services/: asset_service.py  audio_probe.py  audio_transform_service.py  coverage_service.py  dataset_preview_service.py  dataset_selection_service.py  export_service.py  import_service.py  import_upload_service.py  sampling_service.py  text_normalize.py  transform_job_service.py  validation_service.py
kws_testset/utils/: hashing.py  ids.py  paths.py
kws_testset/web/: index.html
tests/: conftest.py  test_asset_edit_api.py  test_audio_probe.py  test_audio_transform_service.py  test_dataset_browse_api.py  test_dataset_build_api.py  test_export_service.py  test_import_and_assets.py  test_sampling_service.py  test_smoke.py  test_static_serving.py  test_text_normalize.py  test_transform_jobs_api.py  test_upload_import_api.py  test_validation_service.py
(+15 files in other folders)
