[project]
name = "kws-testset"
version = "0.1.0"
description = "Local KWS testset creation and management platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=2.0.0",
  "sqlmodel>=0.0.22",
  "scipy>=1.13.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
  "pyyaml>=6.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["kws_testset*"]
